--- a/assets/translations/shared/data/pt-BR.lang
+++ b/assets/translations/shared/data/pt-BR.lang
@@ -194,6 +194,8 @@ setting_note_skins-default: "Padrão"
 setting_note_skins-future: "Futurista"
 setting_note_skins-chip: "Ficha"
 description_note_skins: "Escolha o seu estilo de Notas favorito."
+setting_note_splashes: "Salpicos de notas"
+description_note_splashes: "Se desmarcado, desativa os salpicos de notas."
 setting_note_splashes: "Impacto das Notas"
 setting_note_splashes-psych: "Psych"
 setting_note_splashes-diamond: "Diamante"
@@ -205,6 +207,8 @@ setting_note_splash_opacity: "Opacidade do Impacto"
 description_note_splash_opacity: "O quão transparente os Impactos das Notas devem ser."
 setting_hide_hud: "Esconder HUD"
 description_hide_hud: "Se marcado, a maioria dos elementos da UI ficarão ocultos."
+setting_static_botplay_text: "Texto estático do Botplay"
+description_static_botplay_text: "Se marcada, faz com que o texto do botplay não pulse."
 setting_time_bar: "Barra de Tempo:"
 setting_time_bar-time_left: "Tempo Restante"
 setting_time_bar-time_elapsed: "Tempo Decorrido"
@@ -219,6 +223,8 @@ setting_score_text_grow_on_hit: "Pontuação Pula ao Acertar"
 description_score_text_grow_on_hit: "Se desmarcado, desativa o texto da pontuação pulando\nquando você acerta uma nota."
 setting_health_bar_opacity: "Opacidade da Barra de Vida"
 description_health_bar_opacity: "O quão transparente a Barra de Vida e os ícones devem ser."
+setting_smooth_health_bar: "Barra de saúde suave"
+description_smooth_health_bar: "Se marcado, torna a barra de saúde mais suave."
 setting_fps_counter: "Contador de FPS"
 description_fps_counter: "Se desmarcado, esconde o contador no canto superior esquerdo da tela."
 setting_pause_music: "Música de Pausa:"
@@ -240,6 +246,8 @@ setting_opponent_notes: "Notas do Oponente"
 description_opponent_notes: "Se desmarcado, as notas do oponente serão ocultadas."
 setting_ghost_tapping: "Ghost Tapping"
 description_ghost_tapping: "Se marcado, você não irá receber penalidades por apertar botões enquanto não há notas para apertar."
+setting_ghost_notes: "Ghost Notes"
+description_ghost_notes: "Se desmarcado, desativa as notas fantasmas."
 setting_auto_pause: "Pausa Automática"
 description_auto_pause: "Se marcado, a janela é automaticamente pausada se não estiver em foco."
 setting_disable_reset_button: "Desativar Botão de Reset"
@@ -259,6 +267,13 @@ description_safe_frames: "Ajusta quanto tempo a mais ou a menos você terá\npar
 setting_sustains_as_one_note: "Notas Longas Fundidas"
 description_sustains_as_one_note: "Se marcado, notas longas não poderão ser acertadas se a principal não for acertada,\nalém de contar como um único erro."
 
+// Optimization Settings
+setting_disable_ratings: "Desativar classificações"
+description_disable_ratings: "Se marcada, desativa as classificações que aparecem \n ao pressionar uma nota."
+setting_opponent_static_strums: "Strums estáticos do oponente"
+description_opponent_static_strums: "Mantém os dedilhados do oponente estáticos."
+setting_player_static_strums: "Strums estáticos do jogador"
+description_player_static_strums: "Mantém os dedilhados do jogador estáticos."
 // Loading Screen
 now_loading: "Carregando{1}"
 
